evidence/after/k8s-secure-networkpolicy-after.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-allowed-client-to-demo-app","namespace":"secure"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"role":"allowed-client"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"demo-app-secure"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-06-08T15:21:50Z"
    generation: 1
    name: allow-allowed-client-to-demo-app
    namespace: secure
    resourceVersion: "28636"
    uid: c77c807f-d309-4dde-9c42-4123829ac98b
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            role: allowed-client
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app: demo-app-secure
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"secure"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-06-08T15:21:49Z"
    generation: 1
    name: default-deny-ingress
    namespace: secure
    resourceVersion: "28635"
    uid: 947500f2-6dee-4327-80e5-d02acff42b2f
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
